testdata/baselines/reference/submodule/compiler/jsNoImplicitAnyNoCascadingReferenceErrors.errors.txt
index.js(3,21): error TS8010: Type annotations can only be used in TypeScript files.
index.js(3,21): error TS8026: Expected Foo<T> type arguments; provide these with an '@extends' tag.


==== somelib.d.ts (0 errors) ====
    export declare class Foo<T> {
        prop: T;
    }
==== index.js (2 errors) ====
    import {Foo} from "./somelib";
    
    class MyFoo extends Foo {
                        ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
                        ~~~
!!! error TS8026: Expected Foo<T> type arguments; provide these with an '@extends' tag.
        constructor() {
            super();
            this.prop.alpha = 12;
        }
    }
    